# opencltest

./: CMakeLists.txt  matvec.cl
src/: matvec.c
